@@ -34,12 +34,17 @@ using namespace fdm;
 P51_TailOff::P51_TailOff() :
     _ailerons ( 0.0 ),
     _flaps    ( 0.0 ),
+    _gear     ( 0.0 ),
 
     _dcl_dailerons ( 0.0 )
 {
     _dcx_dflaps = Table::createOneRecordTable( 0.0 );
     _dcz_dflaps = Table::createOneRecordTable( 0.0 );
     _dcm_dflaps = Table::createOneRecordTable( 0.0 );
+
+    _dcx_dgear = Table::createOneRecordTable( 0.0 );
+    _dcz_dgear = Table::createOneRecordTable( 0.0 );
+    _dcm_dgear = Table::createOneRecordTable( 0.0 );
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -60,9 +65,13 @@ void P51_TailOff::readData( XmlNode &dataNode )
 
         if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcl_dailerons, "dcl_dailerons" );
 
-        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcx_dflaps, "dcx_dflaps"  );
-        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcz_dflaps, "dcz_dflaps"  );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcx_dflaps, "dcx_dflaps" );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcz_dflaps, "dcz_dflaps" );
         if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcm_dflaps, "dcm_dflaps" );
+
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcx_dgear, "dcx_dgear" );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcz_dgear, "dcz_dgear" );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _dcm_dgear, "dcm_dgear" );
 
         if ( result != FDM_SUCCESS ) XmlUtils::throwError( __FILE__, __LINE__, dataNode );
     }
@@ -75,13 +84,15 @@ void P51_TailOff::readData( XmlNode &dataNode )
 ////////////////////////////////////////////////////////////////////////////////
 
 void P51_TailOff::computeForceAndMoment( const Vector3 &vel_air_bas,
-                                          const Vector3 &omg_air_bas,
-                                          double airDensity,
-                                          double ailerons,
-                                          double flaps )
+                                         const Vector3 &omg_air_bas,
+                                         double airDensity,
+                                         double ailerons,
+                                         double flaps,
+                                         double gear )
 {
     _ailerons = ailerons;
     _flaps    = flaps;
+    _gear     = gear;
 
     ///////////////////////////////////////////////////////////////////////
     TailOff::computeForceAndMoment( vel_air_bas, omg_air_bas, airDensity );
@@ -96,7 +107,7 @@ void P51_TailOff::update( const Vector3 &vel_air_bas, const Vector3 &omg_air_bas
     TailOff::update( vel_air_bas, omg_air_bas );
     ////////////////////////////////////////////
 
-    Table cz_total = _cz + _flaps * _dcz_dflaps;
+    Table cz_total = _cz + _flaps * _dcz_dflaps + _gear * _dcz_dgear;
 
     _aoa_critical_neg = cz_total.getKeyOfValueMin();
     _aoa_critical_pos = cz_total.getKeyOfValueMax();
@@ -108,7 +119,9 @@ void P51_TailOff::update( const Vector3 &vel_air_bas, const Vector3 &omg_air_bas
 
 double P51_TailOff::getCx( double angleOfAttack ) const
 {
-    return TailOff::getCx( angleOfAttack ) + _flaps * _dcx_dflaps.getValue( angleOfAttack );
+    return TailOff::getCx( angleOfAttack )
+            + _flaps * _dcx_dflaps.getValue( angleOfAttack )
+            + _gear  * _dcx_dgear.getValue( angleOfAttack );
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -122,7 +135,9 @@ double P51_TailOff::getCy( double sideslipAngle ) const
 
 double P51_TailOff::getCz( double angleOfAttack ) const
 {
-    return TailOff::getCz( angleOfAttack ) + _flaps * _dcz_dflaps.getValue( angleOfAttack );
+    return TailOff::getCz( angleOfAttack )
+            + _flaps * _dcz_dflaps.getValue( angleOfAttack )
+            + _gear  * _dcz_dgear.getValue( angleOfAttack );
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -136,7 +151,9 @@ double P51_TailOff::getCl( double sideslipAngle ) const
 
 double P51_TailOff::getCm( double angleOfAttack ) const
 {
-    return TailOff::getCm( angleOfAttack ) + _flaps * _dcm_dflaps.getValue( angleOfAttack );
+    return TailOff::getCm( angleOfAttack )
+            + _flaps * _dcm_dflaps.getValue( angleOfAttack )
+            + _gear  * _dcm_dgear.getValue( angleOfAttack );
 }
 
 ////////////////////////////////////////////////////////////////////////////////
