@@ -1,3 +1,9 @@
+2020-03-01 Marek M. Cel <marekcel@marekcel.pl>
+
+    * C-130 and P-51 landing gear aerodynamics
+
+
+
 2020-02-29 Marek M. Cel <marekcel@marekcel.pl>
 
     * CGI - vectors, rotor blur, blades datum and paths
